# miden-vm

./: CHANGELOG.md
air/: Cargo.toml
assembly/src/assembler/instruction/: crypto_ops.rs  mod.rs
assembly/src/parsers/: adv_ops.rs  nodes.rs  tests.rs
assembly/src/parsers/serde/: deserialization.rs  mod.rs  serialization.rs
compiler/src/ir/: ast.rs
core/: Cargo.toml
core/src/operations/: mod.rs
core/src/operations/decorators/: advice.rs
docs/src/user_docs/assembly/: cryptographic_operations.md  io_operations.md
miden/: Cargo.toml
miden/tests/integration/helpers/: mod.rs
miden/tests/integration/operations/: crypto_ops.rs
miden/tests/integration/stdlib/collections/: mmr.rs  mod.rs  smt.rs
miden/tests/integration/stdlib/crypto/: mod.rs  rpo.rs
miden/tests/integration/stdlib/crypto/fri/: mod.rs  verifier_fri_e2f4.rs
processor/: Cargo.toml
processor/src/chiplets/hasher/: mod.rs
processor/src/decorators/: mod.rs
processor/src/operations/: crypto_ops.rs
prover/: Cargo.toml
stdlib/asm/collections/: mmr.masm  smt.masm
stdlib/asm/crypto/hashes/: native.masm
stdlib/docs/: mmr_collections.md  native_hashes.md  smt_collections.md
verifier/: Cargo.toml
