[package]
name = "miden-core"
version = "0.5.0"
description = "Miden VM core components"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
categories = ["emulators", "no-std"]
keywords = ["instruction-set", "miden", "program"]
edition = "2021"
rust-version = "1.67"

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["math/std", "winter-utils/std"]

[dependencies]
math = { git = "https://github.com/frisitano/winterfell.git", branch = "no-std-fix", package = "winter-math", version = "0.6", default-features = false }
crypto = { git = "https://github.com/0xPolygonMiden/crypto.git", branch = "no-std-fix-git", package = "miden-crypto", version = "0.2", default-features = false }
winter-crypto = { git = "https://github.com/frisitano/winterfell.git", branch = "no-std-fix", package = "winter-crypto", version = "0.6", default-features = false }
winter-utils = { git = "https://github.com/frisitano/winterfell.git", branch = "no-std-fix", package = "winter-utils", version = "0.6", default-features = false }

[dev-dependencies]
proptest = "1.1"
rand_utils = { git = "https://github.com/frisitano/winterfell.git", branch = "no-std-fix", version = "0.6", package = "winter-rand-utils" }
